--- a/app/src/main/res/layout/activity_data_cek_pajak.xml
+++ b/app/src/main/res/layout/activity_data_cek_pajak.xml
@@ -15,29 +15,33 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
+            android:layout_marginTop="10dp"
             android:text=" Perhitungan Pajak Kendaraan "
             android:textAppearance="?android:attr/textAppearanceLarge"/>
         <TableRow
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:background="#3CB371">
 
             <TextView
 
+                android:layout_width="209dp"
                 android:layout_column="1"
-                android:padding="2dip"
-                android:textStyle="bold"
-                android:text="No Plat"
                 android:layout_marginLeft="4dp"
+                android:padding="2dip"
+                android:text="No Plat"
                 android:textColor="#ffff"
-                android:typeface="serif"/>
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
 
             <TextView
                 android:id="@+id/txtnoplat"
                 android:layout_width="284dp"
                 android:background="@color/white"
-                android:gravity="right"
                 android:padding="2dip"
-
+                android:textSize="20sp"
+                android:gravity="left"
+                android:textColor="@color/black"
                 android:text="Ctrl-O" />
         </TableRow>
         <TableRow
@@ -49,6 +53,7 @@
                 android:padding="1dip"
                 android:textStyle="bold"
                 android:text="Tahun"
+                android:textSize="20sp"
                 android:textColor="#ffff"
                 android:layout_marginLeft="4dp"
                 android:typeface="serif"/>
@@ -56,7 +61,9 @@
                 android:background="@color/white"
                 android:id="@+id/txttahun"
                 android:text="Ctrl-O"
-                android:gravity="right"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:gravity="left"
                 android:padding="2dip" />
         </TableRow>
         <TableRow android:background="#3CB371"
@@ -65,6 +72,7 @@
                 android:layout_width="120dp"
                 android:layout_column="1"
                 android:textStyle="bold"
+                android:textSize="20sp"
                 android:text="Merk"
                 android:textColor="@color/white"
                 android:layout_marginLeft="4dp"
@@ -73,24 +81,30 @@
                 android:background="@color/white"
                 android:id="@+id/txtmerk"
                 android:text="Ctrl-O"
-                android:gravity="right"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:gravity="left"
                 android:padding="2dip" />
         </TableRow>
         <TableRow android:background="#3CB371"
             android:layout_marginTop="5dp">
+
             <TextView
                 android:layout_width="120dp"
                 android:layout_column="1"
                 android:textStyle="bold"
-                android:layout_marginLeft="4dp"
+                android:textSize="20sp"
                 android:text="Warna"
                 android:textColor="@color/white"
+                android:layout_marginLeft="4dp"
                 android:typeface="serif"/>
             <TextView
+                android:background="@color/white"
                 android:id="@+id/txtwarna"
                 android:text="Ctrl-O"
-                android:background="@color/white"
-                android:gravity="right"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:gravity="left"
                 android:padding="2dip" />
         </TableRow>
         <TableRow android:background="#3CB371"
@@ -98,6 +112,7 @@
             <TextView
                 android:layout_width="120dp"
                 android:layout_column="1"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 android:text="Berlaku s/d"
                 android:textColor="@color/white"
@@ -107,7 +122,9 @@
                 android:id="@+id/txtberlaku"
                 android:text="Ctrl-O"
                 android:background="@color/white"
-                android:gravity="right"
+                android:gravity="left"
+                android:textSize="20sp"
+                android:textColor="@color/black"
                 android:padding="2dip" />
         </TableRow>
         <TableRow android:background="#3CB371"
@@ -115,6 +132,7 @@
             <TextView
                 android:layout_width="120dp"
                 android:layout_column="1"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:text="Biaya PKB"
@@ -123,8 +141,10 @@
             <TextView
                 android:id="@+id/txtbiaya"
                 android:text="Ctrl-O"
+                android:textSize="20sp"
+                android:textColor="@color/black"
                 android:background="@color/white"
-                android:gravity="right"
+                android:gravity="left"
                 android:padding="2dip" />
         </TableRow>
         <TableRow android:background="	#3CB371"
@@ -133,7 +153,7 @@
             <TextView
                 android:layout_width="120dp"
                 android:textColor="@color/white"
-
+                android:textSize="20sp"
                 android:layout_column="1"
                 android:layout_marginLeft="4dp"
                 android:text="Sanksi PKB"
@@ -142,8 +162,10 @@
             <TextView
                 android:id="@+id/txtsanksipkb"
                 android:text="Ctrl-O"
+                android:textSize="20sp"
+                android:textColor="@color/black"
                 android:background="@color/white"
-                android:gravity="right"
+                android:gravity="left"
                 android:padding="2dip" />
         </TableRow>
         <TableRow android:background="	#3CB371"
@@ -151,6 +173,7 @@
             <TextView
                 android:layout_width="120dp"
                 android:layout_column="1"
+                android:textSize="20sp"
                 android:layout_marginLeft="4dp"
                 android:textStyle="bold"
                 android:text="Biaya SWDKLLJ"
@@ -159,7 +182,9 @@
             <TextView
                 android:id="@+id/txtbiayaswdkllj"
                 android:text="Ctrl-O"
-                android:gravity="right"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:gravity="left"
                 android:background="@color/white"
                 android:padding="2dip" />
         </TableRow>
@@ -171,6 +196,7 @@
                 android:layout_column="1"
                 android:textColor="@color/white"
                 android:textStyle="bold"
+                android:textSize="20sp"
                 android:layout_marginLeft="4dp"
                 android:text="Sanksi SWDKLLJ"
                 android:typeface="serif"/>
@@ -178,7 +204,9 @@
             <TextView
                 android:text="Ctrl-O"
                 android:id="@+id/txtsanksiswd"
-                android:gravity="right"
+                android:gravity="left"
+                android:textSize="20sp"
+                android:textColor="@color/black"
                 android:background="@color/white"
                 android:padding="2dip" />
         </TableRow>
@@ -187,6 +215,7 @@
             <TextView
                 android:layout_width="120dp"
                 android:layout_column="1"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:layout_marginLeft="4dp"
@@ -196,7 +225,9 @@
                 android:id="@+id/txtadmtn"
                 android:text="Ctrl-O"
                 android:background="@color/white"
-                android:gravity="right"
+                android:gravity="left"
+                android:textSize="20sp"
+                android:textColor="@color/black"
                 android:padding="2dip" />
         </TableRow>
         <TableRow android:background="	#3CB371"
@@ -206,14 +237,17 @@
                 android:layout_column="1"
                 android:textColor="@color/white"
                 android:textStyle="bold"
+                android:textSize="20sp"
                 android:layout_marginLeft="4dp"
                 android:text="ADM. STNK"
                 android:typeface="serif"/>
             <TextView
                 android:id="@+id/txtadmst"
                 android:text="Ctrl-O"
+                android:textSize="20sp"
+                android:textColor="@color/black"
                 android:background="@color/white"
-                android:gravity="right"
+                android:gravity="left"
                 android:padding="2dip" />
         </TableRow>
         <TableRow android:background="#3CB371"
@@ -226,6 +260,7 @@
                 android:textStyle="bold"
                 android:layout_marginLeft="4dp"
                 android:text="Total"
+                android:textSize="18sp"
                 android:typeface="serif"/>
 
             <TextView
@@ -233,8 +268,10 @@
                 android:layout_width="212dp"
                 android:layout_marginLeft="4dp"
                 android:background="@color/white"
-                android:gravity="right"
+                android:gravity="left"
                 android:padding="2dip"
+                android:textSize="20sp"
+                android:textColor="@color/black"
                 android:text="Ctrl-O" />
         </TableRow>
 
